--- a/lib/dictaphone_web/live/dictaphone.html.heex
+++ b/lib/dictaphone_web/live/dictaphone.html.heex
@@ -30,15 +30,37 @@
 
   <p>
     Web dictaphone is built using
-    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator.getUserMedia">
+    <a class="underline border-gray-800" href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator.getUserMedia">
       getUserMedia
     </a>
-    and the <a href="https://developer.mozilla.org/en-US/docs/Web/API/MediaRecorder_API">MediaRecorder API</a>, which provides an easier way to capture Media streams.
+    and the <a class="underline border-gray-800" href="https://developer.mozilla.org/en-US/docs/Web/API/MediaRecorder_API">MediaRecorder API</a>, which provides an easier way to capture Media streams.
   </p>
 
   <p>
-    Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to
-    <a href="http://soledadpenades.com/">Sole</a>
+    Icon courtesy of <a class="underline border-gray-800" href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to
+    <a class="underline border-gray-800" href="http://soledadpenades.com/">Sole</a>
     for the Oscilloscope code!
   </p>
+
+  <hr class="border-gray-800">
+
+  <p><a class="underline border-gray-800" href="https://github.com/fly-apps/phoenix-dictaphone?tab=readme-ov-file#web-dictaphone-adapted-for-flyio">Phoenix Dictaphone</a> adds:</p>
+
+  <ul>
+    <li><p><a class="underline border-gray-800" href="https://hexdocs.pm/ecto/Ecto.html">Ecto</a> with a <a class="underline border-gray-800" href="https://www.postgresql.org/">PostgreSQL</a> database to persist an ordered list of clips</p></li>
+    <li><p><a class="underline border-gray-800" href="https://hexdocs.pm/ex_aws_s3/ExAws.S3.html">ExAws.S3</a> with a <a class="underline border-gray-800" href="https://www.tigrisdata.com/">Tigris</a> bucket for storing audio files</p></li>
+    <li><p><a class="underline border-gray-800" href="https://hexdocs.pm/phoenix_pubsub/Phoenix.PubSub.html">Phoenix.PubSub</a> with <a class="underline border-gray-800" href="https://upstash.com/">Upstash Redis</a> db and <a class="underline border-gray-800" href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSockets</a> for broadcasting updates</p></li>
+  </ul>
+
+  <p>Multiple replicas of this application can be deployed, even in multiple regions.</p>
+
+  <hr class="border-gray-800">
+
+  <p>When <code>WHISPER_URL</code> is set:</p>
+
+  <ul>
+    <li><p>Clips that are stored in S3 Tigris will be sent to the <a class="underline border-gray-800" href="https://github.com/rubys/cog-whisper/?tab=readme-ov-file#whisper-on-fly-gpus">Cog Whisper</a> application for transcription.</p></li>
+    <li><p>Transcription results will be stored in the PostgreSQL database.</p></li>
+    <li><p>Database updates will be broadcast to all connected clients.</p></li>
+  </ul>
 </aside>
